...
                .fillMaxSize()
                .background(Brush.verticalGradient(listOf(c1, c2))),
            contentAlignment = Alignment.Center
        ) {
            if (isNone) {
                Text(
                    text = "Aa",
                    fontSize = 20.sp,
                    fontWeight = FontWeight.SemiBold,
                    color = Color.White.copy(alpha = 0.7f)
                )
            } else {
                AvatarIcon(
...
